force-app/main/default/objects/Repair__c/fields/SymptomType__c.field-meta.xml
<CustomField>
    <fullName>SymptomType__c</fullName>
    <description>Created By: Manoj Kumar
Created Date: 23/10/2020
User Story: GD-1297
Purpose :- After Sales record of Customer.</description>
    <label>Symptom Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inspection/Allignment</fullName>
            </value>
            <value>
                <fullName>Oil Replenishment</fullName>
            </value>
            <value>
                <fullName>Electronic Repair</fullName>
            </value>
            <value>
                <fullName>Sheet Painting</fullName>
            </value>
            <value>
                <fullName>Accessory</fullName>
            </value>
            <value>
                <fullName>Etc</fullName>
            </value>
            <value>
                <fullName>Cleaning Service</fullName>
            </value>
            <value>
                <fullName>Replenishment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>