force-app/main/default/objects/Repair__c/fields/Trailer__c.field-meta.xml
<CustomField>
    <fullName>Trailer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trailer</label>
    <referenceTo>Repair__c</referenceTo>
    <relationshipLabel>Trailers</relationshipLabel>
    <relationshipName>Trailers</relationshipName>
    <type>Lookup</type>
</CustomField>