force-app/main/default/objects/Repair__c/fields/VisitLocation__c.field-meta.xml
<CustomField>
    <fullName>VisitLocation__c</fullName>
    <description>Created By: Manoj Kumar
Created Date: 23/10/2020
User Story: GD-1297
Purpose :- After Sales record of Customer.</description>
    <label>Visit Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Service Center</fullName>
            </value>
            <value>
                <fullName>Valet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>